# HouLean

./: .gitignore  HouLean.lean  lake-manifest.json  lakefile.lean  lean-toolchain  readme.org  sop_tomass.dev.lean.2.0.hda
HouLean/: Data.lean  Hou.lean  Sop.lean  SopFunction.lean  SopFunctions.lean
cpp/: CMakeLists.txt  DataCApi.h  ExternFun.cpp  External.h  HouCApi.h  HouFunctions.cpp  HouGeometry.cpp  HouLeanCApi.h  HouLeanCommand.cpp  HouLeanCore.cpp  HouLeanFunctions.h  HouLeanModule.h  SopCApi.h  SopContext.h  SopFunctions.cpp  Util.cpp  Util.h
cpp/src/: CMakeLists.txt  HouLeanContext.h  HouLeanCore.cpp  HouLeanCore.h  HouLeanFunctions.h  HouLeanModule.h
cpp/src/utils/: scope_guard.hpp
houdini/hip/: dev.hip  example.hip  example.hipnc
houdini/hip/lean/wrangles/lean1/: Main.lean
houdini/otl/: sop_tomass.dev.lean.1.0.hda  sop_tomass.dev.lean.2.0.hda  sop_tomass.dev.leanwrangle.1.0.hda
wrangles/dev.lean/: Main.lean
